# python-advanced-course

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
initial/homework/: binary_search.py  call_counter_decorator.py  even_squares.py  generators.py  heads_and_legs_puzzle.py  resource_quota_context_manager.py
initial/homework_answers/: call_counter_decorator.py
memory/c_based_concepts/: lectures_examples.ipynb
memory/caching/: lectures_examples.ipynb
memory/caching/homework_answers/: choice_of_strategy.py  house_robber.py  lru_cache.py
memory/caching/homework_answers/smart_file_parse_cache/: parse_cache.py
memory/fragments_and_copies/: lectures_examples.ipynb
memory/fragments_and_copies/homework/: copy_on_write_array.py  event_aggregator.py  generators_examples.py  memory_profiler.py
memory/memory_anatomy/: lectures_examples.ipynb
memory/memory_anatomy/homework/: allocator.py  memory_leak.py
multitasking/gil/: lectures_examples.ipynb
multitasking/gil/homework/: choice_of_strategy.py  single_threading.py
multitasking/gil/homework_answers/: choice_of_strategy.py  single_threading.py
multitasking/processes/: lectures_examples.ipynb
multitasking/processes/homework/: logging_centralization.py  matrix_multiplier.py  shared_cache.py
multitasking/threads/: lectures_examples.ipynb  real_rlock_usage.ipynb
multitasking/threads/homework/: bounded_executor.py  downloader.py  thread_safe_structures.py
multitasking/threads/homework_answers/: bounded_executor.py  downloader.py  thread_safe_structures.py
tests/multitasking/gil/: test_single_threading.py
tests/multitasking/processes/: conftest.py  test_brc.py  test_logging_centralization.py  test_matrix_multiplier.py  test_shared_cache.py
tests/multitasking/threads/: conftest.py  test_bounded_executor.py  test_downloader.py  test_log_collector.py  test_thread_safe_structures.py
(+9 files in other folders)
