[project]
name = "python-advanced"
version = "0.1.0"
requires-python = ">=3.12"
authors = [
    { name = "Svitlana Sumets" }
]
dependencies = [
    "dask==2026.1.2",
    "httpx==0.28.1",
    "mypy==1.19.1",
    "numpy==2.3.5",
    "pandas==3.0.1",
    "pre-commit>=4.5.1",
    "psutil==7.1.3",
    "pyarrow==23.0.1",
    "pympler==1.1",
    "pytest==9.0.1",
    "pytest-asyncio==1.3.0",
    "pytest-mock==3.15.1",
    "requests==2.32.5",
    "ruff==0.15.2",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "F",
    "F401",
    "I",
    "W",
    "A",
    "ARG",
    "PLE",
    "ASYNC",
    "TID251",
    "Q",
]
ignore = [
    "E501",
    "A001",
    "A002",
    "A003",
    "ARG001",
    "ARG002",
]
unfixable = ["B"]

[tool.ruff.lint.isort]
force-single-line = false
lines-between-types = 1
combine-as-imports = true
order-by-type = false

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F403", "F401"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_defs = false
check_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = false
disable_error_code = [
    "index",
    "var-annotated",
    "assignment",
    "arg-type",
    "attr-defined",
    "annotation-unchecked",
    "union-attr",
    "return-value",
    "import-untyped",
]

[tool.pytest.ini_options]
addopts = "-q --maxfail=1"
testpaths = ["tests"]
